# chatbot-agentico-rag

./: .env.example  README.md  app.py  components.py  config.py  guardrails.py  pyproject.toml
.chroma_practica_final/: chroma.sqlite3
.streamlit/: config.toml
scripts/: generate_pdf.py
src/: app.py  components.py  guardrails.py  message_utils.py
